--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,6 +17,11 @@ header {
     h2 {
         font-size: 35px;
     }
+    nav {
+        a {
+            color: white;
+        }
+    }
 }
 
 .buscador0km {
