--- a/sass/style.scss
+++ b/sass/style.scss
@@ -19,20 +19,28 @@ header {
         font-size: 35px;
     }
     nav {
-        display: flex;;
-        a {
-            color: white;
-            text-decoration: none;
-            font-size: 24px;
-            margin: 0px 10px;
-            transition: .6s;
-            padding: 3px;
-        }
-        a:hover {
-            color: black;
-            scale: 1.1;
-            background-color: grey;
-            border-radius: 7px;
+        ul {
+            display: flex;
+            li {
+                list-style: none;
+                transition: .5s;
+                a {
+                    color: white;
+                    text-decoration: none;
+                    margin: 0px 10px;
+                    transition: .5s;
+                    font-size: 21px;
+                }
+                a:hover {
+                    color: black;
+                }
+            }
+            li:hover {
+                background-color: grey;
+                border-radius: 7px;
+                scale: 1.1;
+                padding: 2px;
+            }
         }
     }
 }
@@ -98,4 +106,8 @@ header {
     }
 }
 
+
+/* ----------------------------------- */
+/* ----------------------------------- */
+/* ----------------------------------- */
 
